--- a/distribution/index.html
+++ b/distribution/index.html
@@ -54,15 +54,19 @@
             </div>
             <div class="items-center w-[50%] p-2">
                 <h1 class="font-main-poppins text-slate-800 font-bold text-5xl">Sarthak Roy</h1>
-                <h1 class="font-main-poppins font-light text-slate-600 text-nowrap text-4xl mt-[4px]">becoming my best
+                <h1 class="font-main-poppins font-light text-slate-600 text-nowrap text-4xl mt-[6px]">becoming my best
                     version </h1>
-                <p class="mt-3 text-base font-main-poppins">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus iure, corrupti pariatur voluptas
-                    consequuntur nulla dignissimos id sint nemo non! Alias, asperiores expedita id veniam quisquam eum
-                    perferendis, illo fugiat officiis reprehenderit consectetur, laborum cupiditate rerum quasi nesciunt
-                    optio a.</p>
+                <p class="mt-[11px] text-base font-main-poppins w-[470px] ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dignissimos iste veniam omnis excepturi dolore est, cupiditate quasi odit expedita totam.</p>
+                <a href="Resume fl immage.jpg" target="_blank" rel="noopener noreferrer">
+                    <button class="bg-black hover:bg-slate-700   text-white font-main px-7 py-2 rounded-md mt-[15px]" type="button">
+                Show More</button>
+                </a>
             </div>
+
+
         </div>
+
     </section>
 
     <section class="h-screen">
