--- a/distribution/index.html
+++ b/distribution/index.html
@@ -47,7 +47,7 @@
 
 
 
-    <section class="h-screen ">
+    <section class=" ">
         <div class="flex items-center justify-center mt-[80px] w-[100%] ">
             <div>
                 <img class="h-[350px] w-[350px] " src="illustration_2-removebg-preview.png" alt="">
@@ -56,18 +56,31 @@
                 <h1 class="font-main-poppins text-slate-800 font-bold text-5xl">Sarthak Roy</h1>
                 <h1 class="font-main-poppins font-light text-slate-600 text-nowrap text-4xl mt-[6px]">becoming my best
                     version </h1>
-                <p class="mt-[11px] text-base font-main-poppins w-[470px] ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <p class="mt-[11px] text-base font-main-poppins w-[470px] ">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit.
                     Dignissimos iste veniam omnis excepturi dolore est, cupiditate quasi odit expedita totam.</p>
                 <a href="Resume fl immage.jpg" target="_blank" rel="noopener noreferrer">
-                    <button class="bg-black hover:bg-slate-700   text-white font-main px-7 py-2 rounded-md mt-[15px]" type="button">
-                Show More</button>
+                    <button
+                        class= "transition ease-in-out hover:-translate-y-1 hover:scale-110  bg-black hover:bg-slate-700  duration-500 text-white font-main px-7 py-2 rounded-md mt-[15px]"
+                        type="button">
+                        Show More</button>
                 </a>
             </div>
-
-
         </div>
 
+        <div class=" mt-[190px] grid  justify-items-center  ">
+            <p class="font-light w-[70%] text-center font-main-poppins text-2xl ">I'm on a mission to creating
+                a comprehensive solution for the Indian
+                <span class="text-orange-600 font-bold"> event industry</span> streamlining every aspect
+                into a <span class="text-orange-600 font-bold">single platform.</span> <a
+                    class=" align-middle ml-[-2px]  font-main font-bold p-[8px] rounded-md bg-black mx-[10px]  text-white text-sm"
+                    href="http://" target="_blank"> Know More</a>
+            </p>
+            <span></span>
+        </div>
     </section>
+
+
 
     <section class="h-screen">
         <h1>hi</h1>
