--- a/distribution/index.html
+++ b/distribution/index.html
@@ -61,7 +61,7 @@
                     Dignissimos iste veniam omnis excepturi dolore est, cupiditate quasi odit expedita totam.</p>
                 <a href="Resume fl immage.jpg" target="_blank" rel="noopener noreferrer">
                     <button
-                        class= "transition ease-in-out hover:-translate-y-1 hover:scale-110  bg-black hover:bg-slate-700  duration-500 text-white font-main px-7 py-2 rounded-md mt-[15px]"
+                        class= "transition ease-in-out hover:-translate-z-1 hover:scale-110  bg-black hover:bg-slate-700  duration-500 text-white font-main px-7 py-2 rounded-md mt-[15px]"
                         type="button">
                         Show More</button>
                 </a>
@@ -82,8 +82,19 @@
 
 
 
-    <section class="h-screen">
-        <h1>hi</h1>
+    <section class="h-screen mt-[120px] place-content-center">
+        <h2 class="font-main text-2xl font-bold mb-[35px] ml-[55px]">About Me</h2>
+        <div class=" flex  justify-around">
+            <div class="olk">
+                1st
+            </div>
+            <div class="olk">
+                2nd
+            </div>
+            <div class="olk">
+                3rd
+            </div>
+        </div>
     </section>
 </body>
 <!-- npx tailwindcss -i ./source/input.css -o ./distribution/style.css --watch -->
