--- a/distribution/index.html
+++ b/distribution/index.html
@@ -61,7 +61,7 @@
                     Dignissimos iste veniam omnis excepturi dolore est, cupiditate quasi odit expedita totam.</p>
                 <a href="Resume fl immage.jpg" target="_blank" rel="noopener noreferrer">
                     <button
-                        class= "transition ease-in-out hover:-translate-z-1 hover:scale-110  bg-black hover:bg-slate-700  duration-500 text-white font-main px-7 py-2 rounded-md mt-[15px]"
+                        class="transition ease-in-out hover:-translate-z-1 hover:scale-110  bg-black hover:bg-slate-700  duration-500 text-white font-main px-7 py-2 rounded-md mt-[15px]"
                         type="button">
                         Show More</button>
                 </a>
@@ -85,14 +85,32 @@
     <section class="h-screen mt-[120px] place-content-center">
         <h2 class="font-main text-2xl font-bold mb-[35px] ml-[55px]">About Me</h2>
         <div class=" flex  justify-around">
-            <div class="olk">
-                1st
+            <div class="olk ">
+                <div class="flex justify-center  ">
+                    <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
+                </div>
+                <p class="content-center text-center mt-2 font-main p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+                    fugiat tempore adipisci
+                    nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
+                    nobis non,</p>
             </div>
             <div class="olk">
-                2nd
+                <div class="flex justify-center  ">
+                    <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
+                </div>
+                <p class="content-center text-center mt-2 font-main p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+                    fugiat tempore adipisci
+                    nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
+                    nobis non,</p>
             </div>
             <div class="olk">
-                3rd
+                <div class="flex justify-center  ">
+                    <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
+                </div>
+                <p class="content-center text-center mt-2 font-main p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+                    fugiat tempore adipisci
+                    nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
+                    nobis non, justify-aroundejr wenfher --watchwnwofnr</p>
             </div>
         </div>
     </section>
