--- a/distribution/index.html
+++ b/distribution/index.html
@@ -50,7 +50,7 @@
     <section class=" ">
         <div class="flex items-center justify-center mt-[80px] w-[100%] ">
             <div>
-                <img class="h-[350px] w-[350px] " src="illustration_2-removebg-preview.png" alt="">
+                <img class="h-[350px] w-[350px] " src="self_5-removebg-preview.png" alt="">
             </div>
             <div class="items-center w-[50%] p-2">
                 <h1 class="font-main-poppins text-slate-800 font-bold text-5xl">Sarthak Roy</h1>
@@ -82,10 +82,32 @@
 
 
 
-    <section class="h-screen mt-[120px] place-content-center">
+    <section class=" ">
+        <div class="flex items-center justify-center mt-[80px] w-[100%] ">
+            <div class="items-center w-[50%] p-2">
+                <h1 class="font-main-poppins text-slate-800 font-bold text-5xl">Sarthak Roy</h1>
+                <h1 class="font-main-poppins font-light text-slate-600 text-nowrap text-4xl mt-[6px]">becoming my best
+                    version </h1>
+                <p class="mt-[11px] text-base font-main-poppins w-[470px] ">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit.
+                    Dignissimos iste veniam omnis excepturi dolore est, cupiditate quasi odit expedita totam.</p>
+                <a href="Resume fl immage.jpg" target="_blank" rel="noopener noreferrer">
+                    <button
+                        class="transition ease-in-out hover:-translate-z-1 hover:scale-110  bg-black hover:bg-slate-700  duration-500 text-white font-main px-7 py-2 rounded-md mt-[15px]"
+                        type="button">
+                        Show More</button>
+                </a>
+            </div>
+            <div>
+                <img class="h-[350px] w-[350px] " src="self_5-removebg-preview.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- <section class="h-screen mt-[120px] place-content-center">
         <h2 class="font-main text-2xl font-bold mb-[35px] ml-[55px]">About Me</h2>
         <div class=" flex  justify-around">
-            <div class="olk ">
+            <div class="olk hover:translate-z-1 hover:scale-110 duration-500">
                 <div class="flex justify-center  ">
                     <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
                 </div>
@@ -94,7 +116,7 @@
                     nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
                     nobis non,</p>
             </div>
-            <div class="olk">
+            <div class="olk hover:translate-z-1 hover:scale-110 duration-500">
                 <div class="flex justify-center  ">
                     <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
                 </div>
@@ -103,7 +125,7 @@
                     nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
                     nobis non,</p>
             </div>
-            <div class="olk">
+            <div class="olk hover:translate-z-1 hover:scale-110 duration-500">
                 <div class="flex justify-center  ">
                     <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
                 </div>
@@ -113,7 +135,7 @@
                     nobis non, justify-aroundejr wenfher --watchwnwofnr</p>
             </div>
         </div>
-    </section>
+    </section> -->
 </body>
 <!-- npx tailwindcss -i ./source/input.css -o ./distribution/style.css --watch -->
 
