--- a/distribution/index.html
+++ b/distribution/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="">
+
     <nav class="bg-slate-200 h-16 place-content-center w-[100%] sticky top-0">
 
         <div class="flex  w-auto h-[100%] items-center  justify-between mx-2 ">
@@ -82,60 +83,51 @@
 
 
 
-    <section class=" ">
-        <div class="flex items-center justify-center mt-[80px] w-[100%] ">
+    <section class="h-screen place-content-end">
+        <div class="flex items-center justify-center w-[100%] ">
             <div class="items-center w-[50%] p-2">
-                <h1 class="font-main-poppins text-slate-800 font-bold text-5xl">Sarthak Roy</h1>
-                <h1 class="font-main-poppins font-light text-slate-600 text-nowrap text-4xl mt-[6px]">becoming my best
-                    version </h1>
-                <p class="mt-[11px] text-base font-main-poppins w-[470px] ">Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit.
-                    Dignissimos iste veniam omnis excepturi dolore est, cupiditate quasi odit expedita totam.</p>
-                <a href="Resume fl immage.jpg" target="_blank" rel="noopener noreferrer">
-                    <button
-                        class="transition ease-in-out hover:-translate-z-1 hover:scale-110  bg-black hover:bg-slate-700  duration-500 text-white font-main px-7 py-2 rounded-md mt-[15px]"
-                        type="button">
-                        Show More</button>
-                </a>
+                <h1 class="font-main-poppins text-slate-800 font-bold text-4xl mb-5">Education</h1>
+                <p class="mt-[11px] text-base font-main-poppins w-[auto] ">
+                    <span class="text-xl font-main font-bold">Bachelor of Technology (B.Tech) in Information
+                        Technology</span> <br>
+                    <span class="font-main mb-11 font-bold text-slate-600">Bengal College of Engineering and Technology,
+                        Durgapur. </span> <br>
+                    <span class="font-main font-bold text-slate-600 text-sm">Currently in 3rd year, 2026</span><br>
+                <div class="mt-3">
+                    <span class="font-main font-bold text-sm">- Higher Secondary (12th) - Science</span> <br>
+                    <span class="font-main font-bold text-sm">- Kaity N.C High School</span> <br>
+                </div>
+
+                <div class="mt-2">
+                    <span class="font-main font-bold text-sm">- Secondary (10th) </span> <br>
+                    <span class="font-main font-bold text-sm"> - Kaity N.C High School</span> <br>
+                </div>
+
+                </p>
+
             </div>
             <div>
-                <img class="h-[350px] w-[350px] " src="self_5-removebg-preview.png" alt="">
+                <img class="h-[350px] w-[350px] " src="secound_2-removebg.png" alt="">
             </div>
         </div>
     </section>
 
-    <!-- <section class="h-screen mt-[120px] place-content-center">
-        <h2 class="font-main text-2xl font-bold mb-[35px] ml-[55px]">About Me</h2>
-        <div class=" flex  justify-around">
-            <div class="olk hover:translate-z-1 hover:scale-110 duration-500">
-                <div class="flex justify-center  ">
-                    <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
-                </div>
-                <p class="content-center text-center mt-2 font-main p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                    fugiat tempore adipisci
-                    nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
-                    nobis non,</p>
-            </div>
-            <div class="olk hover:translate-z-1 hover:scale-110 duration-500">
-                <div class="flex justify-center  ">
-                    <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
-                </div>
-                <p class="content-center text-center mt-2 font-main p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                    fugiat tempore adipisci
-                    nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
-                    nobis non,</p>
-            </div>
-            <div class="olk hover:translate-z-1 hover:scale-110 duration-500">
-                <div class="flex justify-center  ">
-                    <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
-                </div>
-                <p class="content-center text-center mt-2 font-main p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                    fugiat tempore adipisci
-                    nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
-                    nobis non, justify-aroundejr wenfher --watchwnwofnr</p>
-            </div>
-        </div>
-    </section> -->
+    <section class="h-screen">
+
+    </section>
+
+
+
+
+
+
+
+
+    <script src="script.js"></script>
+</body>
+
+</html>
+
 </body>
 <!-- npx tailwindcss -i ./source/input.css -o ./distribution/style.css --watch -->
 
