--- a/distribution/index.html
+++ b/distribution/index.html
@@ -8,7 +8,57 @@
     <title>Document</title>
 </head>
 
+
+
+
 <body class="">
+
+
+
+    <!DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Alert Demo</title>
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
+        <style>
+            .hidden {
+                display: none;
+            }
+            #ok{
+                outline: none;
+            }
+        </style>
+    </head>
+
+    <body  class="flex items-center justify-center h-screen bg-gray-100">
+
+        <div id="alert" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+            <div class="bg-white p-6 rounded-lg shadow-lg text-center h-96">
+                <button id="ok" class="float-right hover:border-none" onclick="clicked()"><img class="h-5 w-5" src="cross icon.png"
+                        alt=""></button>
+                <p class="text-xl font-bold text-gray-800">This is an alert message!</p>
+            </div>
+        </div>
+
+        <script>
+            // Wait 3 seconds and then show the alert
+            setTimeout(() => {
+                document.getElementById('alert').classList.remove('hidden');
+            }, 3000);
+
+            function clicked() {
+                document.getElementById('alert').style.display = "none";
+            }
+        </script>
+    </body>
+
+    </html>
+
+
+
 
     <nav class="bg-slate-200 h-16 place-content-center w-[100%] sticky top-0">
 
