--- a/distribution/index.html
+++ b/distribution/index.html
@@ -27,19 +27,26 @@
             .hidden {
                 display: none;
             }
-            #ok{
+
+            #ok {
                 outline: none;
             }
         </style>
     </head>
 
-    <body  class="flex items-center justify-center h-screen bg-gray-100">
+    <body class="flex items-center justify-center h-screen bg-gray-100">
 
         <div id="alert" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-            <div class="bg-white p-6 rounded-lg shadow-lg text-center h-96">
-                <button id="ok" class="float-right hover:border-none" onclick="clicked()"><img class="h-5 w-5" src="cross icon.png"
-                        alt=""></button>
-                <p class="text-xl font-bold text-gray-800">This is an alert message!</p>
+            <div class="bg-black p-6 rounded-lg shadow-lg text-center h-56 w-64">
+                <button id="ok" class="float-right hover:border-none" onclick="clicked()"><img class="h-5 w-5"
+                        src="cross icon.png" alt=""></button>
+                <p class="font-bold font-main text-base text-white mt-12">Follow Me On:</p>
+                <div class="flex justify-between content-end mt-7 ">
+                    <a target="_blank" href="https://shorturl.at/ZNjgI"><img class="icon" src="linkdin.png" alt=""></a>
+                    <a target="_blank" href="https://x.com/isarthakroy?t=VcL0iTrm2RP2JGOiky2WtQ&s=09"><img class="icon"
+                            src="twitter.png" alt=""></a>
+                    <a target="_blank" href="https://shorturl.at/M1qZI"><img class="icon" src="tinsta.png" alt=""></a>
+                </div>
             </div>
         </div>
 
@@ -47,7 +54,7 @@
             // Wait 3 seconds and then show the alert
             setTimeout(() => {
                 document.getElementById('alert').classList.remove('hidden');
-            }, 3000);
+            }, 4000);
 
             function clicked() {
                 document.getElementById('alert').style.display = "none";
@@ -162,8 +169,23 @@
         </div>
     </section>
 
-    <section class="h-screen">
 
+    <section class="h-screen place-content-center">
+        <div class="flex items-center justify-between w-[100%] ">
+            <div>
+                <img class="h-[350px] w-[350px] " src="skill 2.jpeg" alt="">
+            </div>
+
+            <div class="grid-flow-col bg-slate-300 h-[100%] w-[50%]">
+                <span class="bg-red-500 h-11 skl">01</span>
+                <span class="bg-blue-700 skl">02</span>
+                <span class="bg-orange-300 skl">03</span>
+                <span class="bg-fuchsia-700 skl">04</span>
+                <span class="bg-green-600 skl">05</span>
+                <span class="bg-slate-500 skl">06</span>
+                <span class="bg-black skl">07</span>
+            </div>
+        </div>
     </section>
 
 
