rendering through node

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
@@ -106,7 +106,7 @@
     <section class=" ">
         <div class="flex items-center justify-center mt-[80px] w-[100%] ">
             <div>
-                <img class="h-[350px] w-[350px] " src="/self_5-removebg-preview.png" alt="none">
+                <img class="h-[350px] w-[350px] " src="self_5-removebg-preview.png" alt="none">
             </div>
             <div class="items-center w-[50%] p-2">
                 <h1 class="font-main-poppins text-slate-800 font-bold text-5xl">Sarthak Roy</h1>
