--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
                     <!-- Avatar -->
                     <div class="w-full lg:w-1/2 flex justify-center">
                         <img class="h-70 w-70 sm:h-96 sm:w-60 lg:h-96 lg:w-80 object-contain"
-                            src="/self_5-removebg-preview.png" alt="Sarthak Avatar" />
+                            src="/frontend/distribution/self_5-removebg-preview.png" alt="Sarthak Avatar" />
                     </div>
 
                     <!-- Text content -->
@@ -173,7 +173,7 @@
 
                     <!-- Image Section -->
                     <div class="w-full sm:w-1/2 flex justify-center">
-                        <img src="./secound_2-removebg.png" alt="Education Image"
+                        <img src="/frontend/distribution/secound_2-removebg.png" alt="Education Image"
                             class="w-[330px] h-[290px] sm:w-[450px] sm:h-[450px]" />
                     </div>
 
