fixing massage route

--- a/frontend/distribution/index.html
+++ b/frontend/distribution/index.html
@@ -329,7 +329,7 @@
                         </p>
 
                         
-                        <form action="https://portfolio-ck61wey6s-sarthak4321s-projects.vercel.app/massage" method="post" class="flex flex-col md:flex-row gap-4">
+                        <form action="https://your-vercel-deployed-domain.vercel.app/api/massage" method="post" class="flex flex-col md:flex-row gap-4">
                             <input type="email" name="email" placeholder="Enter your email"
                                 class="flex-1 p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-black">
                             <input type="text" name="text" placeholder="Leave a message"
