--- a/frontend/distribution/index.html
+++ b/frontend/distribution/index.html
@@ -398,7 +398,7 @@
                         </p>
 
 
-                        <form action="https://portfolio-1j640dfop-sarthak4321s-projects.vercel.app/api/massage"
+                        <form action="https://portfolio-5eio.onrender.com/massage"
                             method="POST" class="flex flex-col md:flex-row gap-4">
                             <input type="email" name="email" placeholder="Enter your email"
                                 class="flex-1 p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-black">
