--- a/frontend/distribution/index.html
+++ b/frontend/distribution/index.html
@@ -51,13 +51,13 @@
                     <!-- Content -->
                     <p class="font-bold text-lg text-gray-100 mt-2">Follow Me On:</p>
                     <div class="flex justify-center gap-6 mt-6">
-                        <a target="_blank" href="https://www.linkedin.com/in/sarthakroy4321">
+                        <a target="_blank" href="https://www.linkedin.com/in/sarthak-roy-1b290822a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
                             <img class="icon hover:scale-110 transition" src="linkdin.png" alt="LinkedIn" />
                         </a>
-                        <a target="_blank" href="https://twitter.com/isarthakroy">
+                        <a target="_blank" href="https://x.com/isarthakroy?t=yZOoDZV6FoJda9A9YHuKCw&s=09">
                             <img class="icon hover:scale-110 transition" src="twitter.png" alt="Twitter" />
                         </a>
-                        <a target="_blank" href="https://www.instagram.com/isarthakroy">
+                        <a target="_blank" href="https://www.instagram.com/i___sarthakroy?igsh=MXV3c3ZremVlMTBidA==">
                             <img class="icon hover:scale-110 transition" src="tinsta.png" alt="Instagram" />
                         </a>
                     </div>
