--- a/frontend/distribution/index.html
+++ b/frontend/distribution/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- <head>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="description"
+        content="Sarthak Roy is a passionate full stack developer skilled in React, Node.js, MongoDB, and modern web technologies. Check out my portfolio!" />
+    <meta name="keywords"
+        content="Sarthak Roy, Web Developer, React Developer, Node.js, MongoDB, Full Stack, Portfolio" />
+    <meta name="author" content="Sarthak Roy" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
+    <title>Sarthak Roy | Full Stack Web Developer</title>
+</head> -->
+
+
 <head>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/style.css">
-    <title>Sarthak.</title>
+
+    <title>Sarthak Roy | Full Stack Developer Portfolio</title>
+    <meta name="description" content="Explore the portfolio of Sarthak Roy — a full stack web developer using React, Node.js, and MongoDB." />
+    <meta name="keywords" content="Sarthak Roy, Web Developer, React Developer, Node.js, MongoDB, Portfolio, Full Stack Developer" />
+    <meta name="author" content="Sarthak Roy" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Sarthak Roy | Full Stack Developer Portfolio" />
+    <meta property="og:description" content="Explore the portfolio of Sarthak Roy — a full stack web developer using React, Node.js, and MongoDB." />
+    <meta property="og:image" content="https://sarthakroy.netlify.app/preview.jpg" />
+    <meta property="og:url" content="https://sarthakroy.netlify.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sarthak Roy | Full Stack Developer" />
+    <meta name="twitter:description" content="Modern web developer portfolio built with React, Tailwind, Node.js and more." />
+    <meta name="twitter:image" content="https://sarthakroy.netlify.app/preview.jpg" />
 </head>
+
 
 
 
@@ -51,7 +85,8 @@
                     <!-- Content -->
                     <p class="font-bold text-lg text-gray-100 mt-2">Follow Me On:</p>
                     <div class="flex justify-center gap-6 mt-6">
-                        <a target="_blank" href="https://www.linkedin.com/in/sarthak-roy-1b290822a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+                        <a target="_blank"
+                            href="https://www.linkedin.com/in/sarthak-roy-1b290822a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
                             <img class="icon hover:scale-110 transition" src="linkdin.png" alt="LinkedIn" />
                         </a>
                         <a target="_blank" href="https://x.com/isarthakroy?t=yZOoDZV6FoJda9A9YHuKCw&s=09">
@@ -398,8 +433,8 @@
                         </p>
 
 
-                        <form action="https://portfolio-5eio.onrender.com/massage"
-                            method="POST" class="flex flex-col md:flex-row gap-4">
+                        <form action="https://portfolio-5eio.onrender.com/massage" method="POST"
+                            class="flex flex-col md:flex-row gap-4">
                             <input type="email" name="email" placeholder="Enter your email"
                                 class="flex-1 p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-black">
                             <input type="text" name="text" placeholder="Leave a message"
