--- a/frontend/distribution/index.html
+++ b/frontend/distribution/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/frontend/distribution/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/style.css">
 
     <title>Sarthak Roy | Full Stack Developer Portfolio</title>
