--- a/frontend/distribution/index.html
+++ b/frontend/distribution/index.html
@@ -1,20 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- <head>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <meta charset="UTF-8">
-    <meta name="description"
-        content="Sarthak Roy is a passionate full stack developer skilled in React, Node.js, MongoDB, and modern web technologies. Check out my portfolio!" />
-    <meta name="keywords"
-        content="Sarthak Roy, Web Developer, React Developer, Node.js, MongoDB, Full Stack, Portfolio" />
-    <meta name="author" content="Sarthak Roy" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Sarthak Roy | Full Stack Web Developer</title>
-</head> -->
-
 
 <head>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -24,6 +10,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/style.css">
 
+    <meta name="google-site-verification" content="ddRfUtDRD79AdqSsdvS6r9OAUVYcNWUmaBR45fP2w0o" />
     <title>Sarthak Roy | Full Stack Developer Portfolio</title>
     <meta name="description" content="Explore the portfolio of Sarthak Roy — a full stack web developer using React, Node.js, and MongoDB." />
     <meta name="keywords" content="Sarthak Roy, Web Developer, React Developer, Node.js, MongoDB, Portfolio, Full Stack Developer" />
