--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
 
                         <!-- Desktop Links (Hidden on mobile) -->
                         <div class="flex sm:flex hidden items-center sm:gap-8">
-                            <a href="#aboutme"
+                            <a href="projects.html"
                                 class="font-main og font-bold text-gray-500 hover:text-gray-700">Projects</a>
                             <a href="#" class="font-main og font-bold text-gray-500 hover:text-gray-700"
                                 target="_blank">Blog</a>
@@ -156,7 +156,7 @@
                             <span class="font-main font-bold text-slate-600">Bengal College of Engineering and
                                 Technology,
                                 Durgapur</span><br>
-                            <span class="font-main font-bold text-slate-600 text-sm">Currently in 3rd year, 2026</span>
+                            <span class="font-main font-bold text-slate-600 text-sm">Currently in 4th year, 2026</span>
                         </div>
 
                         <div class="mt-5">
