--- a/frontend/distribution/projects.html
+++ b/frontend/distribution/projects.html
@@ -157,7 +157,7 @@
             <div class="project-card border border-gray-300 rounded-2xl overflow-hidden bg-white shadow-lg hover:shadow-2xl transition duration-700"
                 data-animate="fade">
                 <video autoplay loop muted playsinline class="w-full h-52 object-cover">
-                    <source src="distribution/me.mp4" type="video/mp4" />
+                    <source src="me.mp4" type="video/mp4" />
                 </video>
                 <div class="p-6">
                     <h4 class="text-lg font-semibold mb-2">Portfolio</h4>
@@ -184,7 +184,7 @@
             <div class="project-card border border-gray-300 rounded-2xl overflow-hidden bg-white shadow-lg hover:shadow-2xl transition duration-700"
                 data-animate="fade">
                 <video autoplay loop muted playsinline class="w-full h-52 object-cover">
-                    <source src="distribution/tracking.mp4" type="video/mp4" />
+                    <source src="tracking.mp4" type="video/mp4" />
                 </video>
                 <div class="p-6">
                     <h4 class="text-lg font-semibold mb-2">Real-time Location Detector</h4>
@@ -210,7 +210,7 @@
             <div class="project-card border border-gray-300 rounded-2xl overflow-hidden bg-white shadow-lg hover:shadow-2xl transition duration-700"
                 data-animate="fade">
                 <video autoplay loop muted playsinline class="w-full h-52 object-cover">
-                    <source src="distribution/password.mp4" type="video/mp4" />
+                    <source src="password.mp4" type="video/mp4" />
                 </video>
                 <div class="p-6">
                     <h4 class="text-lg font-semibold mb-2">Password-Generator</h4>
@@ -240,7 +240,7 @@
             <div class="project-card border border-gray-300 rounded-2xl overflow-hidden bg-white shadow-lg hover:shadow-2xl transition duration-700"
                 data-animate="fade">
                 <video autoplay loop muted playsinline class="w-full h-52 object-cover">
-                    <source src="distribution/phsyco.mp4" type="video/mp4" />
+                    <source src="phsyco.mp4" type="video/mp4" />
                 </video>
                 <div class="p-6">
                     <h4 class="text-lg font-semibold mb-2">Appointment Booking</h4>
