--- a/frontend/distribution/projects.html
+++ b/frontend/distribution/projects.html
@@ -172,9 +172,9 @@
                         <span class="px-3 py-1 border border-gray-400 rounded-full">MongoDB</span>
                     </div>
                     <div class="flex gap-3">
-                        <a href="https://github.com/Sarthak4321/Smart-PDF-Search" target="_blank"
+                        <a href="https://github.com/Sarthak4321/Portfolio" target="_blank"
                             class="text-sm px-4 py-2 border border-black rounded-lg hover:bg-black hover:text-white transition">GitHub</a>
-                        <a href="#"
+                        <a href="https://sarthakroy.netlify.app/"
                             class="text-sm px-4 py-2 border border-black rounded-lg hover:bg-black hover:text-white transition">Live
                             Demo</a>
                     </div>
@@ -192,14 +192,15 @@
                         Tracks and displays live user locations with an interactive map interface.
                     </p>
                     <div class="flex flex-wrap gap-2 text-xs mb-4">
-                        <span class="px-3 py-1 border border-gray-400 rounded-full">React</span>
+                        <span class="px-3 py-1 border border-gray-400 rounded-full">HTML</span>
+                        <span class="px-3 py-1 border border-gray-400 rounded-full">CSS</span>
+                        <span class="px-3 py-1 border border-gray-400 rounded-full">Web Socket</span>
                         <span class="px-3 py-1 border border-gray-400 rounded-full">Leaflet</span>
-                        <span class="px-3 py-1 border border-gray-400 rounded-full">Firebase</span>
                     </div>
                     <div class="flex gap-3">
-                        <a href="https://github.com/Sarthak4321/Location-Detector" target="_blank"
+                        <a href="https://github.com/Sarthak4321/Location-Tracking" target="_blank"
                             class="text-sm px-4 py-2 border border-black rounded-lg hover:bg-black hover:text-white transition">GitHub</a>
-                        <a href="#"
+                        <a href="https://location-tracking-nine.vercel.app/"
                             class="text-sm px-4 py-2 border border-black rounded-lg hover:bg-black hover:text-white transition">Live
                             Demo</a>
                     </div>
@@ -225,9 +226,9 @@
                         
                     </div>
                     <div class="flex gap-3">
-                        <a href="https://github.com/Sarthak4321/Location-Detector" target="_blank"
+                        <a href="https://github.com/Sarthak4321/Generate_Password" target="_blank"
                             class="text-sm px-4 py-2 border border-black rounded-lg hover:bg-black hover:text-white transition">GitHub</a>
-                        <a href="#"
+                        <a href="https://pro-password.vercel.app/"
                             class="text-sm px-4 py-2 border border-black rounded-lg hover:bg-black hover:text-white transition">Live
                             Demo</a>
                     </div>
@@ -253,11 +254,9 @@
                         <span class="px-3 py-1 border border-gray-400 rounded-full">Firebase</span>
                     </div>
                     <div class="flex gap-3">
-                        <a href="https://github.com/Sarthak4321/Location-Detector" target="_blank"
+                        <a href="https://github.com/Sarthak4321/Dr.-Serena-Blake-web" target="_blank"
                             class="text-sm px-4 py-2 border border-black rounded-lg hover:bg-black hover:text-white transition">GitHub</a>
-                        <a href="#"
-                            class="text-sm px-4 py-2 border border-black rounded-lg hover:bg-black hover:text-white transition">Live
-                            Demo</a>
+                        
                     </div>
                 </div>
             </div>
@@ -267,7 +266,7 @@
     </section>
 
     <footer class="text-center py-12 text-gray-500 border-t border-gray-200">
-        <p>© 2025 Sarthak Roy | Crafted with passion 🖤</p>
+        <p>© 2025 Sarthak Roy | Crafted with passion </p>
     </footer>
 
     <script>
