--- a/frontend/distribution/index.html
+++ b/frontend/distribution/index.html
@@ -150,7 +150,7 @@
 
                     <!-- Mobile Dropdown Menu -->
                     <div id="mobileMenu" class="sm:hidden hidden flex-col px-4 pb-4 bg-slate-200">
-                        <a href="#aboutme"
+                        <a href="projects.html"
                             class="block py-2 font-main font-bold text-gray-500 hover:text-gray-700">Projects</a>
                         <a href="#" class="block py-2 font-main font-bold text-gray-500 hover:text-gray-700"
                             target="_blank">Blog</a>
@@ -208,9 +208,9 @@
 
                         <a href="SARTHAK ROY.pdf" download="Sarthak's Resume" target="_blank" rel="noopener noreferrer">
                             <button
-                                class="transition-transform transform hover:scale-110 bg-black hover:bg-slate-700 duration-300 text-white font-main px-7 py-2 rounded-md mt-6"
+                                class="transition-transform transform hover:scale-110 bg-black hover:bg-slate-700 duration-300 text-white font-main font-bold px-7 py-2 rounded-md mt-6"
                                 type="button">
-                                Show More
+                                Download Resume
                             </button>
                         </a>
                     </div>
